--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Dawini - Plateforme Médicale{% endblock %}</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    {# ===== LEAFLET ===== #}
+    <link rel="stylesheet"
+          href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <style>
         :root {
             --primary: #7C3AED;
